Changelog
=========

6.3-dev - (unreleased)
----------------------

6.2 - (2013-09-23)
------------------
* Feature: Export HTML to PDF with custom cover (requires collective.sendaspdf)
  [voineali refs #14904]

6.1 - (2013-02-25)
------------------
* Feature: added information for contributors
  [ciobabog refs #13892]
* Add Windows support for close_fds parameter of Popen
  [erral #1]

6.0 - (2012-10-08)
------------------
* Fixed dependencies, cleanup and make the package run on a clean Zope
  [ghicaale #5426]

1.1 - (2012-06-12)
------------------
* Added watermark utility
  [szabozo0]

1.0 - (2012-03-05)
------------------
* Initial release
  [voineali]
